.ci-cd/k8s/liferay/liferay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay-deployment
  labels:
    app: ms-service
    run: liferay
spec:
  selector:
    matchLabels:
      run: liferay
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        run: liferay
    spec:
      containers:
      - name: liferay
        image: lfrgs-devops-k8s-actions/liferay:1.0
        securityContext:
          runAsNonRoot: false
          runAsUser: 1000
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        readinessProbe:
          httpGet:
            path: /web/guest
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 25
          periodSeconds: 30
          failureThreshold: 3 
        livenessProbe:
          httpGet:
            path: /web/guest
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 25
          periodSeconds: 10
          failureThreshold: 3 
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      dnsPolicy: ClusterFirst
