.ci-cd/k8s/liferay/liferay-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: liferay
spec:
  ports:
    - port: 8080
  selector:
    run: liferay
